--- a/keystone-client/pom.xml
+++ b/keystone-client/pom.xml
@@ -19,5 +19,11 @@
 			<artifactId>keystone-model</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
 </project>
